2002-06-12  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in: Make header-grabbing work without an explicit
	--main-sgml-file argument.
	
	* gtkdoc-mkdb.in: Emit the object hierarchy as a <screen> rather
	than a <literallayout>, since the Docbook XSL stylesheets don't
	handle <link>s inside <literallayout>. 
	
	* gtkdoc-mkdb.in: Decide wether to generate standalone documents 
	for XIncluding or entities based on the presence of the XInclude 
	namespace declaration on the document element.

2002-06-09  James Henstridge  <james@daa.com.au>

	* gtkdoc-mkdb.in: try to grab the header off the top of the main
	sgml file.

2002-05-31  James Henstridge  <james@daa.com.au>

	* gtkdoc-mkdb.in (OutputSGML): put XIncludes in the $book_bottom
	variable.
	(OutputBook): add the XInclude namespace declaration to the book
	element.

	* gtkdoc-mkhtml.in (declaration): if the document looks like XML,
	process it with xsltproc.

	* configure.in: check for xsltproc.

	* gtk-doc.xsl: start of XSLT template for converting docbook/xml
	to HTML.

2002-06-03  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (ConvertSGMLChars): Don't use Posix character
	classes. Perl < 5.6 doesn't have them; and the API doc autobuilder
	on widget.gnome.org has an old Perl. 

2002-05-29  Matthias Clasen  <maclas@gmx.de>

	Fixes for #77193:
	
	* gtkdoc-mkdb.in (OutputSGML): Call GetSignals, GetArgs and
	GetHierarchy for each symbol here and accumulate.
	(OutputSGMLFile): Get signal, argument and hierarchy information
	from the caller.
	(GetSignals, GetArgs, GetHierarchy): Don't wrap the return value
	in a refsect1, so that the results of multiple calls can be accumulated.

2002-05-28  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (ConvertSGMLChars): Make this work correctly
	for empty elements and XML comments in doc comments.

2002-05-27  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (ReadTemplateFile, OutputSGMLFile): 
	Use only the basename of the template file in the key for the